--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -59,21 +59,21 @@ const {
         <nav class="nav nav-desktop">
           <a href="/" class="home-btn">Home</a>
           <div class="dropdown">
-            <a href="/services" class="nav-parent">Services</a>
+            <a href="/services" class="nav-parent">HomeOrg Services</a>
             <div class="dropdown-menu">
-              <a href="/services/space-efficiency">Space Efficiency</a>
-              <a href="/services/specialised-needs-support"
-                >Specialised Needs Support</a
+              <a href="/services/home-decluttering">Home Decluttering</a>
+              <a href="/services/practical-organising"
+                >Practical Organising</a
               >
-              <a href="/services/technical-approach">Technical Approach</a>
-              <a href="/services/fit-for-purpose-and-style"
-                >Fit for purpose &amp; style</a
+              <a href="/services/homeshare-coliving">Homeshare and Co-living</a>
+              <a href="/services/moving-houses"
+                >Moving Houses &amp; Setting Up</a
               >
-              <a href="/services/share-house">Share house &amp; co-living</a>
+              <a href="/services/staging">Staging to Sell/Lease</a>
             </div>
           </div>
-          <a href="/service-areas">Service Offered</a>
-          <a href="/before-after">Design Ideas</a>
+          <a href="/benefits">Clutterbug Styles</a>
+          <a href="/before-after">Gallery</a>
           <a href="/about">About</a>
           <a class="btn" href="/contact">Book a free chat</a>
         </nav>
@@ -163,22 +163,22 @@ const {
             Services
           </button>
           <ul id="sub-services" class="sub-list" role="list" hidden>
-            <li><a href="/services/space-efficiency">Space Efficiency</a></li>
+            <li><a href="/services/home-decluttering">Home Decluttering</a></li>
             <li>
-              <a href="/services/specialised-needs-support"
-                >Specialised Needs Support</a
+              <a href="/services/practical-organising"
+                >Practical Organising</a
               >
             </li>
             <li>
-              <a href="/services/technical-approach">Technical Approach</a>
+              <a href="/services/homeshare-coliving">Homeshare &amp; Co-living</a>
             </li>
             <li>
-              <a href="/services/fit-for-purpose-and-style"
-                >Fit for purpose &amp; style</a
+              <a href="/services/moving-houses"
+                >Moving Houses &amp; Setting Up</a
               >
             </li>
             <li>
-              <a href="/services/share-house">Share house &amp; co-living</a>
+              <a href="/services/staging">Staging to Sell/Lease</a>
             </li>
             <li class="sub-view-all">
               <a href="/services">View all services</a>
@@ -186,9 +186,9 @@ const {
           </ul>
         </li>
         <li class="mobile-item">
-          <a href="/service-areas">Service Offered</a>
+          <a href="/benefits">Benefits</a>
         </li>
-        <li class="mobile-item"><a href="/before-after">Design Ideas</a></li>
+        <li class="mobile-item"><a href="/before-after">Gallery</a></li>
         <li class="mobile-item"><a href="/about">About</a></li>
         <li class="mobile-item cta">
           <a class="btn" href="/contact">Book a free chat</a>
