--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Base from "../layouts/Base.astro";
 
 <Base title="About - Shepparton Home Organising">
   <section class="container narrow">
-    <h1>About</h1>
+    <h1>Here to Help</h1>
 
     <div class="organisers-copy">
       <p>
@@ -17,10 +17,11 @@ import Base from "../layouts/Base.astro";
         support worker with nearly five years' experience supporting NDIS
         clients, along with a decade in the food industry. His background has
         taught him patience, empathy, and a strong attention to detail. Rowee
-        brings a wealth of expertise with nine years in house design and eight
-        years in government project management. She holds certificates in Social
-        Housing and Business, and is highly skilled in problem-solving, contract
-        management and budget planning. Together, they apply a systematic and
+        brings a wealth of expertise with nine years of house design experience 
+        as an architect in the Philippines and eight years in project management 
+        for Australia state government and community projects. She holds certificates in Social
+        Housing and Business, and is highly skilled in problem-solving, contract 
+        preperation and management, and budget planning. Together, they apply a systematic and
         practical approach to decluttering and reorganising spaces. Their
         mission is to improve the quality of life, health, and well-being of the
         people they serve. By creating calm, functional environments, they help
