--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -447,6 +447,8 @@ track.addEventListener("touchend", (e) => {
 });
 
 window.addEventListener("resize", updateCarousel);
+updateCarousel();
+
 
 
 </script>
