--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -73,7 +73,7 @@ const {
             </div>
           </div>
           <a href="/about">About</a>
-          <a href="/benefits">Clutterbug Styles</a>
+          <a href="/clutterbug-styles">Clutterbug Styles</a>
           <a href="/before-after">Gallery</a>
           
           <a class="btn" href="/contact">Book a free chat</a>
@@ -164,6 +164,9 @@ const {
             Services
           </button>
           <ul id="sub-services" class="sub-list" role="list" hidden>
+            <li class="sub-view-all">
+              <a href="/services">View All Services</a>
+            </li>
             <li><a href="/services/home-decluttering">Home Decluttering</a></li>
             <li>
               <a href="/services/practical-organising"
@@ -181,13 +184,11 @@ const {
             <li>
               <a href="/services/staging">Staging to Sell/Lease</a>
             </li>
-            <li class="sub-view-all">
-              <a href="/services">View all services</a>
-            </li>
+            
           </ul>
         </li>
         <li class="mobile-item">
-          <a href="/benefits">Benefits</a>
+          <a href="/clutterbug-styles">Clutterbug Styles</a>
         </li>
         <li class="mobile-item"><a href="/before-after">Gallery</a></li>
         <li class="mobile-item"><a href="/about">About</a></li>
