--- a/src/pages/services/homeshare-coliving.astro
+++ b/src/pages/services/homeshare-coliving.astro
@@ -19,7 +19,7 @@ const page = {
 
     <div class="tab-panels">
       <div id="common" class="tab-panel is-active">
-        <img src="/images/services/common.png" alt="Shared living space" />
+        <img src="/images/services/sharehouse.png" alt="Shared living space" />
         <h2>Common Areas: reduce friction</h2>
         <ul class="checklist">
           <li>Neutral décor for inclusivity.</li>
@@ -28,7 +28,7 @@ const page = {
         </ul>
       </div>
       <div id="kitchen" class="tab-panel">
-        <img src="/images/services/shared-kitchen.png" alt="Shared kitchen" />
+        <img src="/images/services/sharehouse.png" alt="Shared kitchen" />
         <h2>Shared Kitchen: clear boundaries</h2>
         <ul class="checklist">
           <li>Labelled shelves for each person.</li>
@@ -37,7 +37,7 @@ const page = {
         </ul>
       </div>
       <div id="storage" class="tab-panel">
-        <img src="/images/services/storage.png" alt="Personal storage" />
+        <img src="/images/services/sharehouse.png" alt="Personal storage" />
         <h2>Personal Storage: privacy respected</h2>
         <ul class="checklist">
           <li>Lockable boxes or cupboards.</li>
