--- a/src/pages/services/moving-houses.astro
+++ b/src/pages/services/moving-houses.astro
@@ -19,7 +19,7 @@ const page = {
 
     <div class="tab-panels">
       <div id="prep" class="tab-panel is-active">
-        <img src="/images/services/prep.png" alt="Pre-move preparation" />
+        <img src="/images/services/fitstyle.png" alt="Pre-move preparation" />
         <h2>Pre-Move: declutter first</h2>
         <ul class="checklist">
           <li>Sort and donate before packing.</li>
@@ -28,7 +28,7 @@ const page = {
         </ul>
       </div>
       <div id="packing" class="tab-panel">
-        <img src="/images/services/packing.png" alt="Packing boxes" />
+        <img src="/images/services/fitstyle.png" alt="Packing boxes" />
         <h2>Packing: smart & efficient</h2>
         <ul class="checklist">
           <li>Protect fragile items properly.</li>
@@ -37,7 +37,7 @@ const page = {
         </ul>
       </div>
       <div id="setup" class="tab-panel">
-        <img src="/images/services/setup.png" alt="New home setup" />
+        <img src="/images/services/fitstyle.png" alt="New home setup" />
         <h2>Setup: settle in fast</h2>
         <ul class="checklist">
           <li>Unpack essentials first.</li>
