--- a/src/pages/services/practical-organising.astro
+++ b/src/pages/services/practical-organising.astro
@@ -19,7 +19,7 @@ const page = {
 
     <div class="tab-panels">
       <div id="kitchen" class="tab-panel is-active">
-        <img src="/images/services/kitchen.png" alt="Organised kitchen" />
+        <img src="/images/services/specialised.png" alt="Organised kitchen" />
         <h2>Kitchen: meal prep made simple</h2>
         <ul class="checklist">
           <li>Zone-based cupboards (baking, pantry, snacks).</li>
@@ -28,7 +28,7 @@ const page = {
         </ul>
       </div>
       <div id="wardrobe" class="tab-panel">
-        <img src="/images/services/wardrobe.png" alt="Organised wardrobe" />
+        <img src="/images/services/specialised.png" alt="Organised wardrobe" />
         <h2>Wardrobe: dress without stress</h2>
         <ul class="checklist">
           <li>Capsule wardrobe categories.</li>
@@ -37,7 +37,7 @@ const page = {
         </ul>
       </div>
       <div id="office" class="tab-panel">
-        <img src="/images/services/office.png" alt="Organised office" />
+        <img src="/images/services/specialised.png" alt="Organised office" />
         <h2>Home Office: focus restored</h2>
         <ul class="checklist">
           <li>Cable management solutions.</li>
