--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -62,9 +62,7 @@ const {
             <a href="/services" class="nav-parent">HomeOrg Services</a>
             <div class="dropdown-menu">
               <a href="/services/home-decluttering">Home Decluttering</a>
-              <a href="/services/practical-organising"
-                >Practical Organising</a
-              >
+              <a href="/services/practical-organising">Practical Organising</a>
               <a href="/services/homeshare-coliving">Homeshare and Co-living</a>
               <a href="/services/moving-houses"
                 >Moving Houses &amp; Setting Up</a
@@ -75,7 +73,7 @@ const {
           <a href="/about">About</a>
           <a href="/clutterbug-styles">Clutterbug Styles</a>
           <a href="/before-after">Gallery</a>
-          
+
           <a class="btn" href="/contact">Book a free chat</a>
         </nav>
 
@@ -112,33 +110,43 @@ const {
         </p>
       </div>
 
-      <section class="fb-section">
+     <section class="fb-section">
   <h2 class="fb-heading">Follow us on Facebook</h2>
 
-  <!-- The plugin container -->
-  <div id="fb-plugin-anchor">
-    <div
-      class="fb-page"
-      data-href="https://www.facebook.com/HomeOrgAustralia"
-      data-tabs="timeline"
-      data-width="380"
-      data-height="420"
-      data-small-header="false"
-      data-adapt-container-width="true"
-      data-hide-cover="false"
-      data-show-facepile="true"
-    >
-      <blockquote
-        cite="https://www.facebook.com/HomeOrgAustralia"
-        class="fb-xfbml-parse-ignore"
+  <div class="fb-wrap">
+    <!-- Facebook plugin -->
+    <div id="fb-plugin-anchor">
+      <div
+        class="fb-page"
+        data-href="https://www.facebook.com/HomeOrgAustralia"
+        data-tabs="timeline"
+        data-width="380"
+        data-height="420"
+        data-small-header="false"
+        data-adapt-container-width="true"
+        data-hide-cover="false"
+        data-show-facepile="true"
       >
-        <a href="https://www.facebook.com/HomeOrgAustralia" target="_blank" rel="noopener noreferrer">
-          Home Organisers Australia on Facebook
-        </a>
-      </blockquote>
+        <blockquote
+          cite="https://www.facebook.com/HomeOrgAustralia"
+          class="fb-xfbml-parse-ignore"
+        >
+          <a href="https://www.facebook.com/HomeOrgAustralia" target="_blank" rel="noopener noreferrer">
+            Home Organisers Australia on Facebook
+          </a>
+        </blockquote>
+      </div>
+    </div>
+
+    <!-- Questions / Email block -->
+    <div class="footer-questions">
+      <div class="q">Questions?</div>
+      <a class="email" href="mailto:roweedelgado@homeorg.com.au">
+        <span class="label">Email:</span> roweedelgado@homeorg.com.au</a>
     </div>
   </div>
 </section>
+
 
     </footer>
 
@@ -169,12 +177,12 @@ const {
             </li>
             <li><a href="/services/home-decluttering">Home Decluttering</a></li>
             <li>
-              <a href="/services/practical-organising"
-                >Practical Organising</a
-              >
+              <a href="/services/practical-organising">Practical Organising</a>
             </li>
             <li>
-              <a href="/services/homeshare-coliving">Homeshare &amp; Co-living</a>
+              <a href="/services/homeshare-coliving"
+                >Homeshare &amp; Co-living</a
+              >
             </li>
             <li>
               <a href="/services/moving-houses"
@@ -184,7 +192,6 @@ const {
             <li>
               <a href="/services/staging">Staging to Sell/Lease</a>
             </li>
-            
           </ul>
         </li>
         <li class="mobile-item">
@@ -196,18 +203,20 @@ const {
           <a class="btn" href="/contact">Book a free chat</a>
         </li>
         <!-- Facebook icon button beside Home -->
-<a
-  href="https://www.facebook.com/HomeOrgAustralia"
-  class="social-btn fb"
-  aria-label="Visit us on Facebook"
-  target="_blank"
-  rel="noopener noreferrer"
->
-  <!-- inline SVG for crisp icon -->
-  <svg class="icon-fb" viewBox="0 0 24 24" aria-hidden="true">
-    <path d="M22 12.06C22 6.5 17.52 2 12 2S2 6.5 2 12.06c0 5 3.66 9.15 8.44 9.94v-7.03H7.9v-2.9h2.54V9.41c0-2.5 1.5-3.89 3.8-3.89 1.1 0 2.25.2 2.25.2v2.47h-1.27c-1.25 0-1.64.78-1.64 1.58v1.9h2.79l-.45 2.9h-2.34V22c4.78-.79 8.44-4.94 8.44-9.94Z"/>
-  </svg>
-</a>
+        <a
+          href="https://www.facebook.com/HomeOrgAustralia"
+          class="social-btn fb"
+          aria-label="Visit us on Facebook"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <!-- inline SVG for crisp icon -->
+          <svg class="icon-fb" viewBox="0 0 24 24" aria-hidden="true">
+            <path
+              d="M22 12.06C22 6.5 17.52 2 12 2S2 6.5 2 12.06c0 5 3.66 9.15 8.44 9.94v-7.03H7.9v-2.9h2.54V9.41c0-2.5 1.5-3.89 3.8-3.89 1.1 0 2.25.2 2.25.2v2.47h-1.27c-1.25 0-1.64.78-1.64 1.58v1.9h2.79l-.45 2.9h-2.34V22c4.78-.79 8.44-4.94 8.44-9.94Z"
+            ></path>
+          </svg>
+        </a>
       </ul>
     </nav>
 
