feat(contact): add auto-reply confirmation email to users

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -62,18 +62,19 @@ import Base from "../layouts/Base.astro";
         <textarea
           name="message"
           rows="5"
-          placeholder="What would you like help with?"></textarea>
+          placeholder="Describe in a few words the space requiring organisation"
+        ></textarea>
       </label>
 
       <div class="grid-2">
-        <label>
-          Choose a date
+        <label
+          >Consultation preffered date
           <input
             type="text"
             id="booking-date"
             name="booking_date"
             required
-            placeholder="Pick a date"
+            placeholder="Choose a date"
             autocomplete="off"
             inputmode="none"
           />
